--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="loading-container">
         <div class="logo"></div>
-        <div class="loading-text">
-            <span>Y</span><span>ü</span><span>k</span><span>l</span><span>e</span><span>n</span><span>i</span><span>y</span><span>o</span><span>r</span>
+       <div class="loading-text">
+            <span>H</span><span>a</span><span>z</span><span>ı</span><span>r</span><span>l</span><span>a</span><span>n</span><span>ı</span><span>y</span><span>o</span><span>r</span>
         </div>
     </div>
 </body>
