--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="right">
-      <form action="https://formspree.io/f/xyzformid" method="POST">
+      <form action="https://formspree.io/f/xrbonprj" method="POST">
         <h2>İletişime Geç</h2>
 
         <label>Ad Soyad*</label>
@@ -60,3 +60,4 @@
 
 </body>
 </html>
+
