--- a/index.html
+++ b/index.html
@@ -58,6 +58,29 @@
     </div>
   </div>
 
+  <script>
+const form = document.querySelector("form");
+form.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  const status = document.getElementById("status-message");
+
+  const data = new FormData(form);
+  const response = await fetch(form.action, {
+    method: form.method,
+    body: data,
+    headers: { 'Accept': 'application/json' }
+  });
+
+  if (response.ok) {
+    status.textContent = "✅ Mesajınız başarıyla gönderildi!";
+    form.reset();
+  } else {
+    status.textContent = "❌ Bir hata oluştu, lütfen tekrar deneyin.";
+  }
+});
+</script>
+
 </body>
 </html>
+
 
